# contactform-plus

./: .dockerignore  .env-example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  MEMORY.md  README.md  SECURITY.md  TODO  claude-resume  config.json-example  eslint.config.js  findings.md  historical-events.json  notifs-test.md  package.json  plan.md  pnpm-lock.yaml  research.md  spec.md
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
apps/form/: Dockerfile  alembic.ini  pyproject.toml
apps/form/alembic/: env.py
apps/form/src/emf_form/: main.py  models.py  routes.py  schemas.py  settings.py
apps/form/static/: form.js  style.css
apps/form/templates/: base.html  footer.html  form.html  success.html
apps/form/tests/: conftest.py  test_routes.py
apps/jambonz/: Dockerfile  README.md  pyproject.toml
apps/jambonz/src/jambonz/: adapter.py  escalation.py  main.py
apps/jambonz/tests/: test_jambonz.py
apps/panel/: Dockerfile  pyproject.toml
apps/panel/src/emf_panel/: auth.py  dispatcher.py  main.py  models.py  routes.py  settings.py
apps/panel/static/: panel.css  panel.js
apps/panel/templates/: base.html  case_detail.html  cases.html  dispatcher.html  dispatcher_share.html
apps/panel/tests/: conftest.py  test_routes.py
apps/panel/tests/fixtures/: .gitignore  config.json
apps/router/: Dockerfile  README.md  pyproject.toml
apps/router/src/router/: alert_router.py  listener.py  main.py  models.py  settings.py
apps/router/src/router/ack/: tokens.py
apps/router/src/router/channels/: base.py  email.py  emf_phone.py  mattermost.py  signal.py  slack.py  telephony.py
apps/router/tests/: conftest.py  test_router.py
apps/tts/: Dockerfile  README.md  pyproject.toml
apps/tts/src/tts/: builder.py  main.py
apps/tts/tests/: test_tts.py
docs/: api.md  deploy-host-vars.md  emf-phone-setup.md  emfinfra.md  jambonz-setup.md  mattermost-setup.md  plan-emf-phone-adapter.md  signal.md  swagger-spec.json  sysadmin-asks.md  sysadmin-setup.md  wolfcraig.md
infra/: config.e2e.json  config.e2e.json-example  docker-compose.e2e.yml  docker-compose.wolfcraig.yml  docker-compose.yml
infra/alertmanager/: alertmanager.yml
infra/caddy/: Caddyfile.local  Caddyfile.prod  Caddyfile.wolfcraig
infra/caddy/snippets/: headers.caddy  tls.caddy
infra/grafana/dashboards/: form.json  panel.json  router.json  tts.json
infra/loki/: loki-config.yml  promtail-config.yml
infra/mattermost/: Dockerfile
infra/postgres/: 00_init.sh  00_roles.sql
infra/postgres/e2e/: 00_roles.sql
infra/prometheus/: alert_rules.yml  prometheus.yml
infra/swagger/: Dockerfile  app.py  pyproject.toml
infra/zap/: form-scan.yaml  panel-scan.yaml  scan-policy-api.policy
map/: embed-readonly-view-postmessage.patch
scripts/: backup.py  bad_strings_test.py  check-images.sh  generate_bruno_collection.py  generate_caddyfile.py  generate_secrets.py  generate_wordlist.py  install.py  prod-update  run_e2e.sh  run_zap.py  start-emf-stack.sh  update.sh
shared/: pyproject.toml
shared/src/emf_shared/: config.py  db.py  friendly_id.py  logging.py  mapembed.py  middleware.py  phase.py  tracing.py  urgency.py  wordlist.txt
shared/src/emf_shared/templates/: emf_map.html
shared/tests/: test_config.py  test_friendly_id.py  test_middleware.py  test_phase.py  test_tracing.py
tests/: pyproject.toml
tests/e2e/: conftest.py  helpers.py  pyproject.toml  test_form_api.py  test_form_fields_stored.py  test_form_schema.py  test_form_ui.py  test_notification_flow.py  test_panel_api.py  test_phone_flow.py
tests/security/: test_owasp.py
