[project]
name = "emf-form"
version = "0.1.0"
description = "EMF Conduct public report form"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "emf-shared",
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "httpx>=0.28.1",
    "pyclamd>=0.4.0",
    "python-multipart>=0.0.26",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    "prometheus-fastapi-instrumentator>=8.0.2",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit[toml]>=1.9.4",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pip-audit>=2.10.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]

[tool.uv.sources]
emf-shared = { path = "../../shared", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "S", "B", "A", "C4", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "pyclamd"
ignore_missing_imports = true

[tool.bandit]
skips = []
targets = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:slowapi",
]
testpaths = ["tests"]
