[project]
name = "jambonz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adam McGreggor", email = "adam@adamamyl.com" }
]
requires-python = ">=3.14"
dependencies = [
    "emf-shared",
    "fastapi>=0.135.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
]

[project.scripts]
jambonz = "jambonz:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]

[tool.uv.sources]
emf-shared = { path = "../../shared", editable = true }
