[project]
name = "emf-panel"
version = "0.1.0"
description = "EMF Conduct team panel and dispatcher view"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.0",
    "asyncpg>=0.31.0",
    "authlib==1.6.9",
    "httpx>=0.28.1",
    "emf-shared",
    "fastapi>=0.134.0",
    "itsdangerous>=2.1.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.26",
    "sqlalchemy[asyncio]>=2.0.47",
    "uvicorn[standard]>=0.41.0",
    "starlette>=0.46.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "redis[asyncio]>=5.0.0",
    "pyjwt>=2.9.0",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit[toml]>=1.9.4",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
    "types-authlib>=1.6.8.20260215",
]

[tool.uv.sources]
emf-shared = { path = "../../shared", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "S", "B", "A", "C4", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.bandit]
skips = []
targets = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
