[project]
name = "emf-panel"
version = "0.1.0"
description = "EMF Conduct team panel and dispatcher view"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.0",
    "asyncpg>=0.31.0",
    "authlib==1.7.1",
    "httpx>=0.28.1",
    "emf-shared",
    "fastapi>=0.139.0",
    "itsdangerous>=2.1.0",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.26",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    "starlette>=0.46.0",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "redis>=7.0.0,<8.0.0",
    "pyjwt>=2.9.0",
    "anyio>=4.14.1",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit[toml]>=1.9.4",
    "fakeredis[aioredis]>=2.0",
    "httpx>=0.28.1",
    "mypy>=2.3.0",
    "pip-audit>=2.10.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
    "types-authlib>=1.6.11.20260518",
]

[tool.uv.sources]
emf-shared = { path = "../../shared", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "S", "B", "A", "C4", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]

[tool.bandit]
skips = []
targets = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
