[project]
name = "router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adam McGreggor", email = "adam@adamamyl.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.0",
    "asyncpg>=0.31.0",
    "emf-shared",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.9.0",
    "resend>=2.23.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit[toml]>=1.9.4",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:coroutine '.*' was never awaited:RuntimeWarning:router.alert_router",
    "ignore:coroutine '.*' was never awaited:RuntimeWarning:unittest.mock",
]

[tool.uv.sources]
emf-shared = { path = "../../shared", editable = true }
