[project]
name = "tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adam McGreggor", email = "adam@adamamyl.com" }
]
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.14.2",
    "emf-shared",
    "fastapi>=0.138.1",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "uvicorn>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "httpx>=0.28.1",
    "mypy>=2.3.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.21",
    "pip-audit>=2.10.0",
]

[tool.uv.sources]
emf-shared = { path = "../../shared", editable = true }
