[project]
name = "emf-swagger"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.15.0",
]

[tool.mypy]
python_version = "3.14"
strict = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
