[project]
name = "emf-e2e-tests"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "schemathesis>=3.40.0",
    "pytest-playwright>=0.7.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "hypothesis>=6.135.0",
    "pytest>=9.0.3",
    "mypy>=1.19.0",
    "ruff>=0.15.0",
    "asyncpg>=0.30.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["e2e: end-to-end test against a running stack"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["schemathesis.*", "hypothesis.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
